Fix issue with table alignment

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -110,8 +110,8 @@ table
   &:not(.ln-table) t
     background: var(--table-bg)
   
-th
-  text-align: left
+//th
+//  text-align: left  (commented out to not override style set via markdown)
 
 td, th
   padding: 0.5rem 1rem
@@ -120,7 +120,7 @@ td, th
 td,
 th
   padding: 0.5rem 1rem
-  text-align: left
+//  text-align: left  (commented out to not override style set via markdown)
   font-weight: 400
   &:not(:first-child)
     padding-left: 1.5rem
